--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "homepage": "https://github.com/sjm-practice/webpack-node-react-min#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
